fixed bug with popup not showing up after clicking same item, fixed alignedment of popup, prep for multiple languages, WIP searchbar POGO parity, made a lot of elements not clickable

--- a/app/globals.css
+++ b/app/globals.css
@@ -6,7 +6,6 @@ body {
 
 body {
   font-family: 'Lato', sans-serif;
-  ;
   background-color: #f8fff7;
   color: #4c6f72;
   justify-content: center;
@@ -18,6 +17,7 @@ body {
   z-index: 5;
   position: fixed;
   left: 0;
+  pointer-events: none;
 }
 
 .right-background {
@@ -25,9 +25,10 @@ body {
   z-index: 5;
   position: fixed;
   right: 0;
+  pointer-events: none;
 }
 
-.topbar {
+.topbar-container {
   position: sticky;
   top: 0px;
   padding-top: 45px;
@@ -39,20 +40,66 @@ body {
   align-items: center;
 }
 
-input[type=text] {
+.lang-selector {
+  font-family: 'Lato', sans-serif;
+  font-size: 1.05rem;
+  border: none;
+  background: none;
+  color: black;
+  cursor: pointer;
+  border-radius: 5%;
+}
+
+.lang-selector:active, .lang-selector:hover {
+  background-color: rgba(183, 240, 155, 0.35);
+}
+
+.empty {
   font-family: 'Lato', sans-serif;
   font-size: 1.05rem;
   background-color: #e7f2df;
   color: #4c6f72;
   border: none;
   text-align: center;
+  width: 87.5%;
+  height: 45px;
+  border-radius: 25px;
   background-image: url('../public/search.png');
   background-size: 20px;
   background-position: 35% 50%;
   background-repeat: no-repeat;
-  width: 87.5%;
+  cursor: text;
+  -webkit-transition: width 0.1s;
+  transition: width 0.1s;
+}
+
+.searchbar-container {
+  padding-top: 20px;
+  height: 65px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.searchbar {
+  width: 100%;
   height: 45px;
+}
+
+.search-input {
+  font-family: 'Lato', sans-serif;
+  background-color: #e7f2df;
+  font-size: 1.05rem;
+  height: 43px;
+  width: 87.5%;
   border-radius: 25px;
+  border: none;
+  text-align: center;
+  justify-content: center;
+  background-image: url('../public/search.png');
+  background-size: 20px;
+  background-position: 35% 50%;
+  background-repeat: no-repeat;
 }
 
 ::placeholder {
@@ -68,8 +115,21 @@ input[type=text] {
   /* Firefox */
 }
 
-.searchbox {
-  padding-top: 20px;
+.go-back-button {
+  position: absolute;
+  background-image: url('../public/chevron_left.png');
+  background-repeat: no-repeat;
+  border: none;
+  background-color: blue;
+  top: 130px;
+}
+
+.clear-text-button {
+  position: absolute;
+  border-radius: 50%;
+  border: none;
+  background-color: #e7f2df;
+  top: 130px;
 }
 
 .copy-popup {
@@ -85,16 +145,17 @@ input[type=text] {
   border-width: thick;
   border-style: solid;
   line-height: 200%;
-  top: 100px;
+  /* top: 100px; */
   /** 2 HOURS TO FIND THIS!!!!!!!!! FUCK CSS!
     https://stackoverflow.com/questions/15627401/centering-div-without-using-margin-auto
   **/
   left: 50%;
   transform: translateX(-50%);
+  z-index: 5;
 }
 
 .popup-animation {
-  animation: fade-out 5s;
+  animation: fade-out 3s;
 }
 
 @keyframes fade-out {
@@ -116,11 +177,13 @@ input[type=text] {
 .pokemon-en-text {
   font-weight: 600;
   font-size: 3.5vw;
-  padding-top: 0.2rem
+  padding-top: 0.2rem;
+  pointer-events: none;
 }
 
 .pokemon-jp-text {
   font-size: 3.0vw;
+  pointer-events: none;
 }
 
 .pokemon-grid-item {
@@ -133,15 +196,15 @@ input[type=text] {
   border-radius: 5%;
 }
 
-.pokemon-grid-item:active {
+.pokemon-grid-item:active, .pokemon-grid-item:hover {
   background-color: rgba(183, 240, 155, 0.35);
-  ;
 }
 
 .pokemon-grid img {
   vertical-align: middle;
   width: clamp(50px, 100%, 600px);
   height: auto;
+  pointer-events: none;
 }
 
 .pokemon-grid {
